internal/fixtures/architecture/positive/clean/packages/sdk/src/transport.ts
export const applicationPath = "/api/v1/work";
