internal/fixtures/architecture/negative/secret-ts-comment/apps/web/src/bad.ts
// Retained comments must never contain ghp_abcdefghijklmnopqrstuvwxyz123456.
export const value = "synthetic";
